Remove helloworld api and update logging and rename few
